--- a/1_fundamentos.Rmd
+++ b/1_fundamentos.Rmd
@@ -18,4 +18,14 @@ knitr::opts_chunk$set(echo = TRUE)
   - Encuestas probabilísticas
   - Encuestas no probabilísticas
   
-  
+## Registros administrativos
+
+Son registros que se crean con un objetivo *administrativo* (no estadístico) dentro de una institución, este puede ser físico o digital. 
+
+La cobertura depende del proceso. 
+
+  - Ventajas: Una vez implementada, ofrece información actualizada (digital)
+  - Desventajas: Requiere un fuerte pre - procesamiento, no cubre toda la PO, no es flexible temáticamente
+
+
+
